fix/style: add gradient to bottom of explore page (behind controls)

--- a/src/ui/components/storyView/styles.scss
+++ b/src/ui/components/storyView/styles.scss
@@ -48,7 +48,7 @@
   width: 100%;
 
   &__background {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 5%, transparent 30%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 5%, transparent 30%, transparent 70%, rgba(0, 0, 0, 0.4));
     bottom: 0;
     left: 0;
     position: absolute;
